--- a/IMENA-PAPER-POP-main/IMENA-PAPER-POP-main/package.json
+++ b/IMENA-PAPER-POP-main/IMENA-PAPER-POP-main/package.json
@@ -15,6 +15,7 @@
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "pg": "^8.12.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
